docs-archive/apache-airflow-providers-amazon/9.35.0/_sources/_api/airflow/providers/amazon/aws/exceptions/index.rst.txt
airflow.providers.amazon.aws.exceptions
=======================================

.. py:module:: airflow.providers.amazon.aws.exceptions


Exceptions
----------

.. autoapisummary::

   airflow.providers.amazon.aws.exceptions.EcsTaskFailToStart
   airflow.providers.amazon.aws.exceptions.EcsOperatorError
   airflow.providers.amazon.aws.exceptions.S3HookUriParseFailure
   airflow.providers.amazon.aws.exceptions.S3HookPathTraversalError
   airflow.providers.amazon.aws.exceptions.NeptuneGraphCreationFailedError
   airflow.providers.amazon.aws.exceptions.NeptunePrivateEndpointCreationFailedError
   airflow.providers.amazon.aws.exceptions.NeptunePrivateEndpointDeletionFailedError
   airflow.providers.amazon.aws.exceptions.NeptuneGraphDeletionFailedError
   airflow.providers.amazon.aws.exceptions.NeptuneImportTaskCancellationFailedError
   airflow.providers.amazon.aws.exceptions.NeptuneImportTaskFailedError
   airflow.providers.amazon.aws.exceptions.GlueJobRunStoppedError
   airflow.providers.amazon.aws.exceptions.DataSyncTaskNotFoundError
   airflow.providers.amazon.aws.exceptions.DataSyncMultipleTasksError
   airflow.providers.amazon.aws.exceptions.DataSyncMultipleLocationsError
   airflow.providers.amazon.aws.exceptions.DataSyncLocationNotFoundError
   airflow.providers.amazon.aws.exceptions.DataSyncTaskCreationError
   airflow.providers.amazon.aws.exceptions.DataSyncTaskExecutionFailedError


Module Contents
---------------

.. py:exception:: EcsTaskFailToStart(message)

   Bases: :py:obj:`Exception`


   Raise when ECS tasks fail to start AFTER processing the request.


   .. py:attribute:: message


   .. py:method:: __reduce__()

      Return ECSTask state and its message.



.. py:exception:: EcsOperatorError(failures, message)

   Bases: :py:obj:`Exception`


   Raise when ECS cannot handle the request.


   .. py:attribute:: failures


   .. py:attribute:: message


   .. py:method:: __reduce__()

      Return EcsOperator state and a tuple of failures list and message.



.. py:exception:: S3HookUriParseFailure

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   When parse_s3_url fails to parse URL, this error is thrown.


.. py:exception:: S3HookPathTraversalError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raise when an S3 object key resolves outside the target local directory.


.. py:exception:: NeptuneGraphCreationFailedError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a Neptune Analytics graph fails to reach the available state.


.. py:exception:: NeptunePrivateEndpointCreationFailedError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a Neptune Analytics private graph endpoint fails to be created.


.. py:exception:: NeptunePrivateEndpointDeletionFailedError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a Neptune Analytics private graph endpoint fails to be deleted.


.. py:exception:: NeptuneGraphDeletionFailedError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a Neptune Analytics graph deletion encounters an unexpected AWS error.


.. py:exception:: NeptuneImportTaskCancellationFailedError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a Neptune Analytics import task cancellation fails or returns an unexpected status.


.. py:exception:: NeptuneImportTaskFailedError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a Neptune Analytics import task fails to complete successfully.


.. py:exception:: GlueJobRunStoppedError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a Glue job run finishes in a state that is not a real success.


.. py:exception:: DataSyncTaskNotFoundError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a DataSync task could not be identified or created for the requested locations.


.. py:exception:: DataSyncMultipleTasksError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when multiple DataSync tasks match and random task choice is not allowed.


.. py:exception:: DataSyncMultipleLocationsError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when multiple DataSync locations match and random location choice is not allowed.


.. py:exception:: DataSyncLocationNotFoundError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a DataSync location could not be determined or created.


.. py:exception:: DataSyncTaskCreationError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when DataSync task creation did not return a task ARN.


.. py:exception:: DataSyncTaskExecutionFailedError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a DataSync task execution could not be started or did not complete successfully.


